Replace Cube/Face model with Mesh/Material system, add GLTF/OBJ loaders, and support embedded textures